# bugne-releases

./: .gitignore  CMakeLists.txt  LICENSE  README.md  partitions.csv  sdkconfig.defaults
case/: es3c28p-braun-stl.py  es3c28p-radio-stl.py  es3c28p-robot-stl.py  es3c28p-seventies-stl.py  es3c28p-stl.py  es3c28p_boitier_facade.stl  es3c28p_boitier_fond.stl  es3c28p_braun_grille.stl  es3c28p_braun_pied.stl  es3c28p_carte.stl  es3c28p_radio_capot.stl  es3c28p_radio_corps+grille.step  es3c28p_radio_corps.stl  es3c28p_radio_grille.stl  es3c28p_robot_capot.stl  es3c28p_robot_corps+deco.step  es3c28p_robot_corps.stl  es3c28p_robot_sourire.stl  es3c28p_robot_yeux.stl  es3c28p_seventies_capot.stl  es3c28p_seventies_corps+grille.step  es3c28p_seventies_corps.stl
components/audio/: CMakeLists.txt  audio.c  audio_arbiter.c
components/board/: CMakeLists.txt  board.c
components/board/include/: board.h  board_pins.h
components/config_store/: CMakeLists.txt  config_store.c
components/config_store/include/: config_store.h
components/decode/: CMakeLists.txt  decode.c
components/ha_client/: CMakeLists.txt  ha_client.c
components/logstore/: CMakeLists.txt  logstore.c
components/memo/: CMakeLists.txt  memo_name.c  memo_send.c  memo_store.c  memo_wav.c
components/net/: CMakeLists.txt  net.c
components/podcast/: CMakeLists.txt  played.c  podcast.c  rss_parse.c  rss_parse.h
components/source_sd/: CMakeLists.txt  source_sd.c
components/source_sendspin/: CMakeLists.txt  source_sendspin.cpp
components/source_stream/: CMakeLists.txt  rf_meta.c  rf_meta.h  source_stream.c
components/stats/: CMakeLists.txt  stats.c
components/ui/: CMakeLists.txt  alarm_next.c  lang.c  lv_mem_psram.c  quiet.c  ui.c  usage.c
components/ui/fonts/: bugne_font_14.c  bugne_font_20.c  bugne_font_48.c
components/ui/include/: alarm_next.h  lang.h  quiet.h  ui.h  usage.h
docs/: THIRD_PARTY.md  bugne_pcb_bom.csv  config_schema.md  hardware.md  hardware_alternative.md  manifest_schema.md  quickstart.md  quickstart_fr.md  releasing.md
main/: CMakeLists.txt  bugne_main.c  idf_component.yml
patches/: sendspin-cpp-0.6.1-esp-ws.patch
tools/: flash.sh  manual_shots.py  rf_livemeta_map.py  screenshot.py
(+40 files in other folders)
